...
fun ExpandableFab(
    state: ExpandableFabUiState,
    onToggle: () -> Unit,
    onItemClick: (ExpandableFabItem) -> Unit
) {
    Column(
        Modifier.testTag("ExpandableFab"),
        verticalArrangement = Arrangement.spacedBy(8.dp),
        horizontalAlignment = Alignment.End,
    ) {
        if (state.expanded) {
            state.items.forEach { item ->
                SmallFloatingActionButton(onClick = { onItemClick(item) }) {
...
