...

        Button(
            onClick = onCopy,
            modifier = Modifier
                .fillMaxWidth()
                .defaultItemPadding()
                .testTag("invite_code"),
        ) {
            Icon(Icons.Default.ContentCopy, contentDescription = null)
            Text(
                text = stringResource(Res.string.copy),
            )
        }
...
